--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		<div class="featured">
 			
-			<div class ="rectangle2"> <image class="featured2" src = "C:\Users\user\Downloads\WEBTOOLS\CCIS_Conversion Activity\Images/featured2.png">
+			<div class ="rectangle2"> <image class="featured2" src = "Images/featured2.png">
 				<div class ="featuredtxt">
 				<p><b> Featured </b></p>
 				</div>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 			
-			<div class ="rectangle3"> <image class="featured3" src = "C:\Users\user\Downloads\WEBTOOLS\CCIS_Conversion Activity\Images/featured3.png">
+			<div class ="rectangle3"> <image class="featured3" src = "Images/featured3.png">
 				<div class ="title1">
 				<p><b> NAM PLACERAT </b></p>
 				</div>
@@ -96,7 +96,7 @@
 							</div>
 			</div>
 				
-			<div class ="rectangle4"> <image class="featured4" src = "C:\Users\user\Downloads\WEBTOOLS\CCIS_Conversion Activity\Images/featured4.png">
+			<div class ="rectangle4"> <image class="featured4" src = "Images/featured4.png">
 				<div class ="title1">
 				<p><b> NAM PLACERAT </b></p>
 				</div>
